--- a/apps/templates/home/forms-trabajador-incompletos.html
+++ b/apps/templates/home/forms-trabajador-incompletos.html
@@ -123,7 +123,7 @@
           
             <div class="col-lg-3 col-6">
               <!-- small box -->
-              <div class="small-box bg-success">
+              <div class="small-box bg-warning">
                 <div class="inner">
                   <h3 id="estudios-contador">...</h3>
                   <p>Conteo Estudios</p>
@@ -137,7 +137,7 @@
           
             <div class="col-lg-3 col-6">
               <!-- small box -->
-              <div class="small-box bg-warning">
+              <div class="small-box bg-success">
                 <div class="inner">
                   <h3 id="sueldos-contador">...</h3>
                   <p>Conteo Sueldos</p>
@@ -182,6 +182,9 @@
               <div id="resultados-tabla-seleccionada">
                 <!-- Los resultados se agregarán dinámicamente con JavaScript -->
               </div>
+              <br />
+              <p>Si desea crear/actualizar alguna tabla de sus registros incompletos, por favor ingrese a <a href="/forms-trabajador.html">Formularios</a>.</p>
+
             </div>
           </div>
       </div><!-- /.container-fluid -->
