--- a/apps/templates/home/forms-trabajador-incompletos.html
+++ b/apps/templates/home/forms-trabajador-incompletos.html
@@ -170,7 +170,8 @@
                 </div>
                 <button type="button" class="btn btn-success" onclick="examinarTabla()">Examinar</button>
               </form>
-  
+              <br />
+              <p>Los trabajadores no asociados a la tabla seleccionada son:</p>
               <!-- Resultados de la tabla seleccionada -->
               <div id="resultados-tabla-seleccionada">
                 <!-- Los resultados se agregarán dinámicamente con JavaScript -->
