--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -8,7 +8,7 @@
       class="brand-image img-circle elevation-3"
       style="opacity: 0.8"
     />
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Admin LaborarPE</span>
   </a>
 
   <!-- Sidebar -->
@@ -26,6 +26,7 @@
         <a class="d-block">
           {{ current_user.usuario_nombres }} {{current_user.usuario_apellidos}}
         </a>
+        <a class="d-block">{{ current_user.rol.nombre }}</a>
         <!-- 
           <a class="d-block">{{current_user.id_usuario_rol_id.nombre }}</a>
         -->
