habilito boton de exportar

--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -64,7 +64,7 @@
                 <label for="filterButton" class="invisible">Filtrar:</label>
                 <button type="button" class="btn btn-primary form-control" id="filterButton" disabled>Filtrar</button>
                 <!-- Agrega este botón donde desees en tu vista -->
-                <button type="button" class="btn btn-success form-control" id="exportPDF" disabled>Exportar a PDF</button>
+                <button type="button" class="btn btn-success form-control" id="exportPDF" >Exportar a PDF</button>
               </div>
             </div>
           </div>
