Arreglo tabla visual

--- a/apps/templates/home/index2.html
+++ b/apps/templates/home/index2.html
@@ -76,7 +76,7 @@
                       <th>Nombre</th>
                       <th>Apellido</th>
                       <th>Teléfono</th>
-                      <th>Sexo</th>
+                      <!--<th>Sexo</th>-->
                       <th>Fecha Nacimiento</th>
                       <!-- TABLA TRABAJADOR -->
                       <th>Tipo Documento</th>
@@ -118,6 +118,7 @@
                       <th>Departamento</th>
                       <th>Cargo</th>
                       <!-- TABLA ESTUDIO -->
+                      <!-- 
                       <th>Nivel Educ.</th>
                       <th>Situacion Esp.</th>
                       <th>Regimen Laboral</th>
@@ -129,6 +130,7 @@
                       <th>ID Colegiatura</th>
                       <th>Sede Colegiatura</th>
                       <th>Condición</th>
+                      -->
                     </tr>
                   </thead>
                   <tbody>
