--- a/apps/templates/home/forms-trabajador.html
+++ b/apps/templates/home/forms-trabajador.html
@@ -100,6 +100,7 @@ endblock %}
                     <input
                       type="password"
                       class="form-control"
+                      id="contrasena"
                       name="usuario_contrasenia"
                       placeholder="Ingrese contraseña"
                     />
