Agrego para CRUD dropdowns

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -150,6 +150,12 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a href="/dropdowns.html" class="nav-link">
+            <i class="nav-icon far fa-file"></i>
+            <p>Dropdowns</p>
+          </a>
+        </li>
         <li class="nav-header">EXAMPLES</li>
         <li class="nav-item">
           <a href="/calendar.html" class="nav-link">
