--- a/apps/templates/home/dropdowns.html
+++ b/apps/templates/home/dropdowns.html
@@ -56,19 +56,19 @@
               </select>
             </div>
             <button type="button" class="btn btn-primary" id="confirmarButton">Confirmar</button>
-          </form>
+        </form>
         </div>
       </div>
 
-      <!-- Card para mostrar la opción seleccionada -->
-      <div class="card" id="selectedOptionCard" style="display: none;">
-        <div class="card-header">
-          <h3 class="card-title">Opción Seleccionada</h3>
+        <!-- Tarjeta de resultado -->
+        <div class="card" style="display: none;" id="resultCard">
+            <div class="card-header">
+            <h3 class="card-title">Resultado</h3>
+            </div>
+            <div class="card-body" id="resultCardBody">
+            <!-- El contenido seleccionado del dropdown se mostrará aquí -->
+            </div>
         </div>
-        <div class="card-body">
-          <p id="selectedOptionText"></p>
-        </div>
-      </div>
     
     </section>
     <!-- /.content -->
