--- a/apps/templates/home/dropdowns.html
+++ b/apps/templates/home/dropdowns.html
@@ -63,7 +63,7 @@
         <!-- Tarjeta de resultado -->
         <div class="card" style="display: none;" id="resultCard">
             <div class="card-header">
-            <h3 class="card-title">Resultado</h3>
+            <h3 class="card-title">Campos del Dropdown seleccionado</h3>
             </div>
             <div class="card-body" id="resultCardBody">
             <!-- El contenido seleccionado del dropdown se mostrará aquí -->
