--- a/apps/templates/home/dropdowns.html
+++ b/apps/templates/home/dropdowns.html
@@ -73,7 +73,33 @@
     </section>
     <!-- /.content -->
   </div>
-
+<!-- Modal para editar -->
+<div class="modal" id="editarModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Editar Datos</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <!-- Modal Body -->
+        <div class="modal-body" id="modalBody">
+          <!-- Aquí puedes agregar campos de formulario para editar -->
+          <!-- Ejemplo: <input type="text" id="editField" /> -->
+        </div>
+  
+        <!-- Modal Footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary" id="guardarCambiosBtn">Guardar Cambios</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+  
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE -->
