Acabe falta eliminar

--- a/apps/templates/home/dropdowns.html
+++ b/apps/templates/home/dropdowns.html
@@ -99,7 +99,25 @@
       </div>
     </div>
   </div>
-  
+  <!-- Confirmation Modal -->
+    <div class="modal" id="eliminarConfirmacionModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Eliminar Confirmación</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>¿Está seguro de que desea eliminar este elemento?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" id="confirmarEliminarBtn">Confirmar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE -->
