Agrego modulo de asistencia

--- a/apps/templates/home/dropdowns.html
+++ b/apps/templates/home/dropdowns.html
@@ -68,8 +68,36 @@
             <div class="card-body" id="resultCardBody">
             <!-- El contenido seleccionado del dropdown se mostrará aquí -->
             </div>
-        </div>
+          </div>
     
+    </section>
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">Módulo de Ayuda eliminar registros de dropdowns</h3>
+          <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+              <i class="fas fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
+        <div class="card-body">
+          <h4>Para eliminar ingresar a esta <a href="http://62.72.11.15:3000/api/">URL</a>.</h4>
+          <img src="/static/assets/img/help/referencia.png" alt="Imagen de referencia" width="80%" height="80%" />
+          <h4>Para interactuar con la API, ingresar a la url del dropdown que estamos buscando, por ejemplo de <a href="http://62.72.11.15:3000/api/dropdown_roles/"> roles</a>.</h4>
+          <img src="/static/assets/img/help/referencia2.png" alt="Imagen de referencia" width="80%" height="80%" />
+          <br />
+          <h4>El formulario inferior es para crear campos en el dropdown, para eliminar tendremos que revisar el id del campo a eliminar e igresarlo en la url, por ejmplo para:</h4>
+          <img src="/static/assets/img/help/referencia3.png" alt="Imagen de referencia" width="80%" height="80%" />
+          <br />
+          Ingresaremos su id en la url  y nos cargará los detalles, entonces le damos click a delete y confirmar o delete a la ventana emergente
+          <img src="/static/assets/img/help/referencia4.png" alt="Imagen de referencia" width="80%" height="80%" />
+        </div>
+      </div>
+    <section>
+
     </section>
     <!-- /.content -->
   </div>
