--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -156,6 +156,13 @@
             <p>Dropdowns</p>
           </a>
         </li>
+        <li class="nav-item">
+          <a href="/.html" class="nav-link">
+              <i class="nav-icon fas fa-dollar-sign"></i>
+              <p>Datos Globales</p>
+          </a>
+      </li>
+      
         <li class="nav-header">EXAMPLES</li>
         <li class="nav-item">
           <a href="/calendar.html" class="nav-link">
