Arreglo pag datso globales

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -157,7 +157,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/.html" class="nav-link">
+          <a href="datos_globales/.html" class="nav-link">
               <i class="nav-icon fas fa-dollar-sign"></i>
               <p>Datos Globales</p>
           </a>
