--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -29,12 +29,7 @@ endblock %}
 
 <div class="login-box">
   <div class="login-logo">
-    <a
-      target="_blank"
-      rel="noopener noreferrer"
-      href="https://appseed.us/product/adminlte/flask/"
-      >Flask <b>Admin</b>LTE</a
-    >
+    <a target="_blank" rel="noopener noreferrer" href="#"><b>Admin</b>LTE LaborarPE</a>
   </div>
 
   <!-- /.login-logo -->
