--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -11,11 +11,11 @@
       <a href="index.html" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="#" class="nav-link">Contact</a>
+      <a href="contact.html" class="nav-link">Contact</a>
     </li>
   </ul>
-
-  <!-- SEARCH FORM -->
+  <!-- 
+  <!-- SEARCH FORM 
   <form class="form-inline ml-3">
     <div class="input-group input-group-sm">
       <input
@@ -30,8 +30,7 @@
         </button>
       </div>
     </div>
-  </form>
-
+  </form>-->
   <!-- Right navbar links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
