--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -141,6 +141,15 @@
             </li>
             <li class="nav-item">
               <a
+                href="/forms-trabajador1.html"
+                class="nav-link {% if 'forms-general' in segment %} active {% endif %}"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>R Trabajadores</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
                 href="/forms-trabajador-incompletos.html"
                 class="nav-link {% if 'forms-general' in segment %} active {% endif %}"
               >
@@ -157,7 +166,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="datos_globales/.html" class="nav-link">
+          <a href="datos_globales.html" class="nav-link">
               <i class="nav-icon fas fa-dollar-sign"></i>
               <p>Datos Globales</p>
           </a>
