Separacion de Apellido Paterno y Materno

--- a/apps/templates/home/dash-users.html
+++ b/apps/templates/home/dash-users.html
@@ -61,7 +61,8 @@
                   <tr>
                     <th>DNI</th>
                     <th>Nombre</th>
-                    <th>Apellido</th>
+                    <th>Apell Paterno</th>
+                    <th>Apellido Materno</th>
                     <th>Rol</th>
                     <th>Correo Electrónico</th>
                     <th>Teléfono</th>
