--- a/apps/templates/home/index2.html
+++ b/apps/templates/home/index2.html
@@ -74,7 +74,8 @@
                       <!-- TABLA USUARIO -->
                       <th>DNI</th>
                       <th>Nombre</th>
-                      <th>Apellido</th>
+                      <th>Apel Paterno</th>
+                      <th>Apel Materno</th>
                       <th>Teléfono</th>
                       <!--<th>Sexo</th>-->
                       <th>Fecha Nacimiento</th>
