--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -24,7 +24,7 @@
       </div>
       <div class="info">
         <a class="d-block">
-          {{ current_user.usuario_nombres }} {{current_user.usuario_apellidos}}
+          {{ current_user.usuario_nombres }} {{current_user.usuario_apellido_paterno}} {{current_user.usuario_apellido_materno}} 
         </a>
         <!-- 
           <a class="d-block">{{current_user.id_usuario_rol_id.nombre }}</a>
