--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -82,7 +82,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="/index2.html"
+                href="/dash-trabajadores.html"
                 class="nav-link {% if 'index2.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
