Arreglo dash usuarios

--- a/apps/templates/home/dash-users.html
+++ b/apps/templates/home/dash-users.html
@@ -66,6 +66,8 @@
                     <th>Rol</th>
                     <th>Correo Electrónico</th>
                     <th>Teléfono</th>
+                    <th>Estado</th>
+                    <th>Acciones</th>
                   </tr>
                 </thead>
                 <tbody>
