--- a/apps/templates/home/dash-users.html
+++ b/apps/templates/home/dash-users.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %} {% block title %} Tables Data {% endblock %}
+{% extends "layouts/base.html" %} {% block title %} Usuarios {% endblock %}
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} {% endblock body_class %}
