--- a/apps/templates/home/forms-trabajador-incompletos.html
+++ b/apps/templates/home/forms-trabajador-incompletos.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} UI Icons {% endblock %} 
+{% block title %} Trabajadores incompletos {% endblock %} 
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} {% endblock body_class %} 
