--- a/apps/templates/home/graph-my_graphics.html
+++ b/apps/templates/home/graph-my_graphics.html
@@ -1,7 +1,7 @@
-{% extends "layouts/base.html" %} {% block title %} ChartsJS {% endblock %}
+{% extends "layouts/base.html" %} {% block title %} Gráficos {% endblock %}
 
 <!-- Element injected in the BODY element -->
-{% block body_class %} sidebar-mini {% endblock body_class %}
+{% block body_class %} Graficos-mini {% endblock body_class %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
