Agrego para pruebas

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -73,7 +73,7 @@
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a
-                href="/dash-users.html"
+                href="/dash-users1.html"
                 class="nav-link {% if 'index.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
@@ -170,7 +170,13 @@
               <i class="nav-icon fas fa-dollar-sign"></i>
               <p>Datos Globales</p>
           </a>
-      </li>
+        </li>
+        <li class="nav-item">
+          <a href="pruebas.html" class="nav-link">
+              <i class="nav-icon fas fa-flask"></i>
+              <p>Pruebas</p>
+          </a>
+      </li>      
         <!-- -
         <li class="nav-header">EXAMPLES</li>
         <li class="nav-item">
