Arreglo formualriode usuarios

--- a/apps/templates/home/forms-trabajador1.html
+++ b/apps/templates/home/forms-trabajador1.html
@@ -108,8 +108,8 @@
                   <label for="estado">Estado:</label>
                   <select class="form-control" id="estado" name="estado">
                     <!-- Add options as needed -->
-                    <option value="active">Active</option>
-                    <option value="inactive">Inactive</option>
+                    <option value="Activo">Activo</option>
+                    <option value="Cesado">Cesado</option>
                   </select>
                 </div>
 
@@ -174,7 +174,5 @@
   <script src="/static/assets/js/index/apiUtils.js"></script>
   <script src="/static/assets/js/forms/trabajadores.js"></script>
   <script src="/static/assets/js/forms/formHandler.js"></script>
-  
-  <!--<script src="/static/assets/js/forms/incompletos/conteos.js"></script>-->
 
 {% endblock javascripts %}
